// Copyright 2025 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.reporting.v2;

import "wfa/measurement/internal/reporting/v2/impression_qualification_filter_spec.proto";

option java_package = "org.wfanet.measurement.internal.reporting.v2";
option java_multiple_files = true;

// An impression qualification filter for reporting.
//
// If the `filter_specs` is custom and is not pre-defined by an existing
// `ImpressionQualificationFilter`, then only `filter_specs` needs to be set.
// Otherwise, set both fields.
message ReportingImpressionQualificationFilter {
  // The external ID of an ImpressionQualificationFilter. Only set if it
  // represents the `filter_specs` below.
  string external_impression_qualification_filter_id = 1;

  // The impression filter criteria, no more than on per MediaType.
  repeated ImpressionQualificationFilterSpec filter_specs = 2;
}
